# go2-control

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  temp.md
c_extensions/: pyproject.toml  setup.py
c_extensions/src/: fast_pointcloud.pyi
c_extensions/src/pc_utils/: pcdecode.c
c_extensions/src/utils/: sorting.h
docs/internal/: conf.py  index.rst
docs/internal/_static/: custom.css
docs/internal/api/: core.rst  index.rst  lidar_module.rst  ocr_module.rst  terrain_generator.rst
docs/internal/dev/: core.rst  dds.rst
docs/public/: FAQ.md  repo_structure.md
docs/public/install/: installation.md
docs/public/install/dependencies/: iceoryx2.md  librealsense-sdk.md  mujoco-sim.md  (+4 more)
examples/: examples.md  tests.py
examples/aruko_markers/: aruko_helpers.py  aruko_markers.md  find_markers_native.py  find_markers_sim.py  follow_path_original.py  follow_path_simple.py
examples/modules/lidar/: render_lidar_sim.py
examples/modules/movement/: movement.md  movement.py  movement_simple.md  movement_simple_virtual.py
examples/modules/ocr/: extract_from_single.py  extract_from_temporal_voting.py  ocr.md
examples/modules/video/: multi_camera.py  single_camera.py  streaming.py  video.md
examples/terrain_generator/: add_aruco_markers.py  add_geometry.py  add_textured_geometry.py  terrain_generator.md
go2/: __init__.py  logging.py
go2/communication/: dds.py
go2/core/: __init__.py  controller.py  registry.py
go2/hardware/: hardware_interface_lidar.py  hardware_interface_movement.py
go2/hardware/native/: native_hardware_lidar.py  native_hardware_movement.py
go2/hardware/virtual/: virtual_hardware.py  virtual_hardware_lidar.py  virtual_hardware_movement.py
go2/modules/input/: __init__.py  callback_manager.py  input_module.py
go2/modules/lidar/: callback_dispatcher.py  iox_receiver.py  lidar_module.py
go2/modules/movement/: movement_module.py
go2/modules/ocr/: __init__.py  ocr_config.py  ocr_module.py
go2/modules/video/: video_module.py
refs/: extern_drive.txt
refs/condarefs/: recreate_env.yaml  requirements.txt  resetPipToUS.sh
requirements/: docs.in  docs.txt  runtime.in  runtime.txt
ros2_ws/src/bringup/: package.xml
ros2_ws/src/go2_interfaces/: package.xml
ros2_ws/src/lidar_processor/: package.xml  setup.py
ros2_ws/src/lidar_processor/benchmark/: decode_optimized_vs_unoptimized.py
ros2_ws/src/lidar_processor/lidar_processor/: lidar_bridge.py  lidar_decoder_node.py  lidar_filter_node.py
ros2_ws/src/lidar_processor/test/: conftest.py
ros2_ws/src/lidar_processor/test/integration/: test_lidar_integration.py
ros2_ws/src/lidar_processor/test/unit/: test_decoder_unit.py  test_lidar_bridge_unit.py
scripts/: clear_iceoryx_chaches.sh  go2_wireless.sh
(+9 files in other folders)
